# SalvajeDevoluciones

./: address_matcher.py  app.py  config.py  email_sender.py  models.py  ocr_utils.py  pyproject.toml  sheets_api.py
instance/: ocr_app.db
static/css/: custom.css
static/js/: main.js  webcam.js
templates/: email_template.html  index.html  layout.html
