[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "opencv-python>=4.11.0.86",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "numpy>=2.2.5",
    "sendgrid>=6.12.0",
]
